welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:24: error: type mismatch;
 found   : Unit
 required: Int
	while(isBirthday){
        ^